--- a/style.css
+++ b/style.css
@@ -56,9 +56,9 @@ button:hover {
 
 /* Footer styling */
 footer {
-  background-color: white;
-  color: black;
+  background-color: #333;
+  color: white;
   text-align: center;
-  padding: 10px 0;
+  padding: 15px 0;
   width: 100%;
 }
